src/QPen.h


// 
// This file has been automatically generated by RaQt_maker V0.0.4.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQPenCtor_1();
EXTERNC void * QWQPenCtor_2(int  arg1);
EXTERNC void * QWQPenCtor_3(void * color);
EXTERNC void QWQPensetWidth(void * obj, int32_t  width);
EXTERNC void QWQPensetColor(void * obj, void * color);
EXTERNC void QWQPensetBrush(void * obj, void * brush);
EXTERNC void QWQPenDtor(void *);